--- a/src/Component/styles/Styles.css
+++ b/src/Component/styles/Styles.css
@@ -1,6 +1,34 @@
+:root{
+    --mainColor: #03766c;
+    --secondaryColor:white;
+}
+
 body {
   background: #03766c;
+  text-align: center;
 }
+
+.App {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  text-align: center;
+}
+.App .add-form {
+  background-color: #0a766d;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 1px black;
+  padding: 5px 10px;
+  margin: 30px;
+}
+
+/**********************************************************/
+
+}
+/***************************************************/
 .table-div {
   width: 80%;
   margin: auto;
@@ -24,3 +52,13 @@ td {
 tbody tr:nth-child(odd) {
   background-color: #034c46;
 }
+.sent-tr .edit-td button {
+  margin: 5px;
+  font-size: 10px;
+  border: none;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+}
+
+/*******************
