--- a/src/Component/styles/Styles.css
+++ b/src/Component/styles/Styles.css
@@ -61,4 +61,96 @@ tbody tr:nth-child(odd) {
   cursor: pointer;
 }
 
-/*******************
+/***************************************************************/
+
+form {
+  width: 70%;
+  height: 360px;
+  margin: 50px auto 0 auto;
+  position: relative;
+  margin: 20px auto;
+}
+
+form fieldset {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 60%;
+  height: 250px;
+  margin: auto;
+  text-align: center;
+  padding: 0px;
+  position: relative;
+  border-radius: 20px;
+  border: 1px solid black;
+  background-color: #034c46;
+}
+.input-data {
+  height: 50px;
+  position: relative;
+  width: 50%;
+  margin: 30px 0;
+}
+
+legend {
+  color: white;
+  padding: 0px;
+  font-size: 30px;
+}
+
+.inputs {
+  border: none;
+  border-bottom: 2px solid white;
+  height: 30px;
+  width: 80%;
+  outline: none;
+  background: transparent;
+  color: white;
+
+  font-size: 1rem;
+}
+.inputs::placeholder {
+  font-size: 01rem;
+  color: var(--secondaryColor);
+}
+
+.input-data select {
+  position: absolute;
+  right: px;
+  bottom: 40px;
+  width: 20px;
+  color: var(--secondaryColor);
+  background-color: var(--mainColor);
+}
+.btn-submit {
+  width: 100%;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.submit {
+  background-color: #0a766d;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 1px black;
+  padding: 5px 15px;
+  margin: 30px;
+  font-size: 15px;
+}
+
+@media screen and (min-width: 340px) {
+  form {
+    width: 100%;
+  }
+
+  form fieldset {
+    width: 60%;
+  }
+}
