--- a/src/Component/styles/Styles.css
+++ b/src/Component/styles/Styles.css
@@ -6,7 +6,14 @@
 body {
   background: #03766c;
   text-align: center;
+  position: relative;
 }
+.Switch {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+}
+
 #light {
   background-color: var(--mainColor);
   color: white;
@@ -28,9 +35,13 @@ body {
   color: white;
   border: none;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px 1px black;
+
   padding: 5px 10px;
   margin: 30px;
+  box-shadow: 0px 0px 10px 3px black;
+}
+.App h1{
+    margin: 20px auto;
 }
 
 /**********************************************************/
@@ -54,10 +65,9 @@ body {
   background-color: #000000;
   padding-right: 40px;
   color: white;
+  box-shadow: 0px 0px 10px 3px var(--mainColor);
 }
-.input-search #dark {
-  background-color: yellow;
-}
+
 .input-search::placeholder {
   color: var(--secondaryColor);
   font-size: 18px;
