--- a/src/Component/styles/Styles.css
+++ b/src/Component/styles/Styles.css
@@ -4,9 +4,15 @@
 }
 
 body {
-  background: #03766c;
+  background: var(--mainColor);
   text-align: center;
   position: relative;
+}
+body.dark {
+  background-color: #111;
+}
+body.light {
+  background-color: var(--mainColor);
 }
 .Switch {
   position: absolute;
@@ -30,6 +36,7 @@ body {
   align-items: center;
   text-align: center;
 }
+
 .App .add-form {
   background-color: #0a766d;
   color: white;
@@ -40,8 +47,13 @@ body {
   margin: 30px;
   box-shadow: 0px 0px 10px 3px black;
 }
-.App h1{
-    margin: 20px auto;
+.App h1 {
+  margin: 20px auto;
+  color: #222;
+}
+
+.App#dark > h1 {
+  color: rgb(9, 174, 174);
 }
 
 /**********************************************************/
@@ -108,6 +120,12 @@ body {
   width: 80%;
   margin: auto;
 }
+.table-div#light {
+  background-color: black;
+}
+.table-div#dark {
+  background-color: rgb(0, 9, 9);
+}
 
 .table-theme {
   margin: auto;
@@ -136,6 +154,19 @@ tbody tr:nth-child(odd) {
   cursor: pointer;
 }
 
+#category-sort {
+  background-color: transparent;
+  color: white;
+  border: none;
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: #000;
+}
+#category-sort #optgroup {
+  color: white;
+}
+
 /***************************************************************/
 
 form {
@@ -159,7 +190,9 @@ form fieldset {
   border-radius: 20px;
   border: 1px solid black;
   background-color: #034c46;
+  box-shadow: 0px 0px 10px 3px rgb(164, 161, 161);
 }
+
 .input-data {
   height: 50px;
   position: relative;
