--- a/src/Component/styles/Styles.css
+++ b/src/Component/styles/Styles.css
@@ -14,11 +14,6 @@ body.dark {
 body.light {
   background-color: var(--mainColor);
 }
-.Switch {
-  position: absolute;
-  left: 10px;
-  top: 10px;
-}
 
 #light {
   background-color: var(--mainColor);
@@ -37,13 +32,18 @@ body.light {
   text-align: center;
 }
 
+.App .nav {
+  display: flex;
+
+  align-items: center;
+}
 .App .add-form {
   background-color: #0a766d;
   color: white;
   border: none;
   border-radius: 10px;
 
-  padding: 5px 10px;
+  padding: 5px 5px;
   margin: 30px;
   box-shadow: 0px 0px 10px 3px black;
 }
@@ -115,6 +115,7 @@ body.light {
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
 }
+
 /***************************************************/
 .table-div {
   width: 80%;
@@ -190,7 +191,6 @@ form fieldset {
   border-radius: 20px;
   border: 1px solid black;
   background-color: #034c46;
-  box-shadow: 0px 0px 10px 3px rgb(164, 161, 161);
 }
 
 .input-data {
